--- a/comollegar.html
+++ b/comollegar.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cómo llegar - Mesa Quince</title>
   <link rel="stylesheet" href="https://use.typekit.net/gjx2eue.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/Favicon.png" type="image/png">
 </head>
 
